# b3-portfolio-pipeline

./: .gitignore  Dockerfile  README.md  airflow_settings.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: b3_portfolio_pipeline.py
include/: report_generator.py
include/dbt/: dbt_project.yml  profiles.yml
include/dbt/models/marts/: _marts.yml  fct_dividend_summary.sql  fct_fixed_income_summary.sql  fct_monthly_wallet.sql  fct_stock_detail.sql  fct_treasury_summary.sql
include/dbt/models/staging/: _staging.yml  stg_dividends.sql  stg_etf_positions.sql  stg_fixed_income.sql  stg_stock_lending.sql  stg_stock_positions.sql  stg_trades.sql  stg_treasury_bonds.sql
include/dbt/tests/: assert_no_f_suffix_in_trades.sql  assert_no_negative_quantities.sql  assert_portfolio_value_positive.sql  assert_reference_period_format.sql  assert_weighted_avg_price_consistent.sql
